# slippi-rust-extensions

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: main.yml
config/: Cargo.toml  README.md  build.rs
config/config/: production.toml
config/envs/: development.toml
config/src/: development.rs  lib.rs  main.rs  production.rs
discord-rpc/: Cargo.toml
discord-rpc/src/: config.rs  discord.rs  error.rs  errors.rs  lib.rs  rank.rs  scenes.rs  tray.rs  util.rs  utils.rs
discord-rpc/src/melee/: character.rs  dolphin_mem.rs  dolphin_user.rs  mod.rs  msrb.rs  multiman.rs  stage.rs
dolphin/: Cargo.toml
dolphin/src/: lib.rs
dolphin/src/logger/: layer.rs  mod.rs
exi/: Cargo.toml
exi/src/: config.rs  lib.rs
ffi/: Cargo.toml  build.rs
ffi/includes/: SlippiRustExtensions.h
ffi/src/: exi.rs  game_reporter.rs  jukebox.rs  lib.rs  logger.rs  playback.rs  rank_info.rs  user.rs
game-reporter/: Cargo.toml
game-reporter/src/: iso_md5_cache.rs  iso_md5_hasher.rs  lib.rs  queue.rs  types.rs
jukebox/: Cargo.toml  README.md
jukebox/src/: errors.rs  lib.rs  utils.rs
jukebox/src/disc/: ciso.rs  mod.rs
playback/: Cargo.toml
playback/src/: config.rs  errors.rs  gecko.rs  lib.rs  parser.rs  state.rs  types.rs
rank/: Cargo.toml
rank-info/: Cargo.toml
rank-info/src/: fetcher.rs  lib.rs  utils.rs
rank/src/: fetcher.rs  lib.rs  rank.rs
slippi-gg-api/: Cargo.toml
slippi-gg-api/src/: graphql.rs  lib.rs
user/: Cargo.toml  README.md
user/src/: chat.rs  lib.rs  utils.rs  watcher.rs
user/src/direct_codes/: last_played_parser.rs  mod.rs
user/src/rank/: mod.rs  rank.rs
user/src/rank_fetcher/: mod.rs  network.rs  rank.rs
user/tests/: timestamp_compatibility.rs
