[package]
name = "slippi-config"
description = "Handles Slippi configuration constants"
version = "0.1.0"
authors = [
    "Slippi Team",
    "Robert Peralta <rapito@gmail.com>"
]
build = "build.rs"
edition = "2021"
publish = false

[features]
default = ["slippi_env_development"]
slippi_env_development = []
slippi_env_production = []
ishiiruka = []
playback = []

[dependencies]
serde = { workspace = true }
tracing = { workspace = true }
toml = "0"
