[package]
name = "discord-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.0"
discord-rich-presence = "0.2.3"
encoding_rs = "0.8.32"
lazy_static = "1.4.0"
num_enum = "0.6.1"
open = "4.1.0"
preferences = { git = "https://github.com/andybarron/preferences-rs" }
regex = "1.8.1"
reqwest = { version = "0.11.16", features = ["json"] }
ruspiro-singleton = "0.4.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_derive = "1.0.160"
serde_json = "1.0.96"
single-instance = "0.3.3"
structstruck = "0.4.1"
strum = "0.24.1"
strum_macros = "0.24.3"
tokio = { version = "1.27.0", features = ["full"] }
tokio-util = "0.7.7"
trayicon = "0.1.3"
windows = { version = "0.48.0", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_Memory", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Diagnostics_Debug", "Win32_System_ProcessStatus", "Win32_UI_WindowsAndMessaging"] }
