[package]
name = "slippi-discord-rpc"
description = "A library for interfacing with Discord Rich Presence, providing real-time game state updates from Dolphin emulator."
version = "0.1.0"
authors = [
    "Slippi Team",
    "Anders Madsen <madsenanders97@gmail.com>"
]
edition = "2021"
publish = false

[features]
default = []
ishiiruka = []
mainline = []

[dependencies]
dolphin-integrations = { path = "../dolphin" }
hps_decode = "0.1.1"
process-memory = "0.5.0"
rodio = "0.17.1"
thiserror = "1.0.44"
tracing = { workspace = true }