[package]
name = "slippi-exi-device"
description = "Implements a shadow EXI device."
version = "0.1.0"
authors = [
    "Slippi Team",
    "Ryan McGrath <ryan@rymc.io>"
]
edition = "2021"
publish = false

[features]
default = []
ishiiruka = []
mainline = []

[dependencies]
dolphin-integrations = { path = "../dolphin" }
slippi-discord-rpc = { path = "../discord-rpc" }
slippi-game-reporter = { path = "../game-reporter" }
slippi-jukebox = { path = "../jukebox" }
slippi-user = { path = "../user" }
tracing = { workspace = true }
ureq = { workspace = true }
