[package]
name = "slippi-exi-device"
description = "Implements a shadow EXI device."
version = "0.1.0"
authors = [
    "Slippi Team",
    "Ryan McGrath <ryan@rymc.io>"
]
edition = "2024"
publish = false

[features]
default = []
ishiiruka = [
    "slippi-gg-api/ishiiruka"
]
mainline = [
    "slippi-gg-api/mainline"
]
playback = [
    "slippi-gg-api/playback"
]

[dependencies]
dolphin-integrations = { path = "../dolphin" }
slippi-game-reporter = { path = "../game-reporter" }
slippi-rank-info = { path = "../rank-info" }
slippi-gg-api = { path = "../slippi-gg-api" }
slippi-jukebox = { path = "../jukebox" }
slippi-user = { path = "../user" }
tracing = { workspace = true }
