[package]
name = "slippi_rust_extensions"
description = "An internal library that exposes entry points via the C FFI."
version = "0.1.0"
authors = [
    "Slippi Team",
    "Ryan McGrath <ryan@rymc.io>"
]
repository = ""
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cbindgen = "0.29.0"

[features]
default = ["ishiiruka"]
ishiiruka = [
    "dolphin-integrations/ishiiruka",
    "slippi-game-reporter/ishiiruka",
    "slippi-exi-device/ishiiruka",
    "slippi-user/ishiiruka"
]
mainline = [
    "dolphin-integrations/mainline",
    "slippi-game-reporter/mainline",
    "slippi-exi-device/mainline",
    "slippi-user/mainline"
]
playback = [
    "dolphin-integrations/playback",
    "slippi-game-reporter/playback",
    "slippi-exi-device/playback",
    "slippi-user/playback"
]

[dependencies]
dolphin-integrations = { path = "../dolphin" }
slippi-game-reporter = { path = "../game-reporter" }
slippi-rank = { path = "../rank" }
slippi-exi-device = { path = "../exi" }
slippi-jukebox = { path = "../jukebox" }
slippi-user = { path = "../user" }
tracing = { workspace = true }
