[package]
name = "slippi-jukebox"
description = "A library that serves as an integrated solution for playing Melee's OST in a way that's effectively independent from emulation."
version = "0.1.0"
authors = [
    "Slippi Team",
    "Daryl Pinto <daryl.j.pinto@gmail.com>"
]
edition = "2021"
publish = false
exclude = ["/test-data"]

[features]
default = []
ishiiruka = []
mainline = []

[dependencies]
dolphin-integrations = { path = "../dolphin" }
hps_decode = { version = "0.2.1", features = ["rodio-source"] }
rand = "0.8.5"
rodio = { version = "0.17.1" }
thiserror = "1.0.44"
tracing = { workspace = true }
