[package]
name = "slippi-jukebox"
description = "A library that serves as an integrated solution for playing Melee's OST in a way that's effectively independent from emulation."
version = "0.1.0"
authors = [
    "Slippi Team",
    "Daryl Pinto <daryl.j.pinto@gmail.com>"
]
edition = "2024"
publish = false
exclude = ["/test-data"]

[features]
default = []
ishiiruka = []
mainline = []

[dependencies]
dolphin-integrations = { path = "../dolphin" }
hps_decode = { version = "0.3.0", features = ["rodio-source"] }
rodio = { version = "0.21.1", default-features = false, features = ["playback"] }
thiserror = { workspace = true }
tracing = { workspace = true }
