[package]
name = "slippi-playback"
description = "Functionality for controlling playback engine when watching replays."
authors = [
    "Slippi Team",
    "Jas Laferriere",
    "Ryan McGrath <ryan@rymc.io>"
]
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
ishiiruka = []
mainline = []
playback = []

[dependencies]
dolphin-integrations = { path = "../dolphin" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
