[package]
name = "slippi-rank-info"
description = "Handles fetching and updating (client side knowledge of) player rank."
version = "0.1.0"
authors = [
    "Slippi Team",
    "Aidan Walz <https://github.com/walz0>", 
    "Ryan McGrath <ryan@rymc.io>",
]
edition = "2024"
publish = false

[dependencies]
serde = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }

dolphin-integrations = { path = "../dolphin" }
slippi-gg-api = { path = "../slippi-gg-api" }
slippi-user = { path = "../user" }
