[package]
name = "slippi-user"
description = "Data models and helpers for user authentication status."
authors = [
    "Slippi Team",
    "Ryan McGrath <ryan@rymc.io>"
]
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = ["ishiiruka"]
ishiiruka = []
mainline = []
playback = []

[dependencies]
dolphin-integrations = { path = "../dolphin" }
slippi-gg-api = { path = "../slippi-gg-api" }

chrono = { workspace = true }
open = "5"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ureq = { workspace = true }

[dev-dependencies]
time = { version = "0.3.41", default-features = false, features = [
    "formatting",
    "parsing",
    "local-offset",
    "macros",
    "serde",
    "std",
] }
